<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <View
        android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divisionColor"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/postImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_avatar_placeholder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topDivider" />

    <TextView
        android:id="@+id/postTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/postImageView"
        tools:text="@string/postInfo" />

    <LinearLayout
        android:id="@+id/actionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/postTextView">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/likeButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/like"
                android:src="@drawable/ic_like" />

            <TextView
                android:id="@+id/likesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="11" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/commentButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/comment"
                android:src="@drawable/ic_comment" />

            <TextView
                android:id="@+id/commentsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="28" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/divisionColor"
        app:layout_constraintTop_toBottomOf="@id/actionsLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>